2010-03-10    <d.scott@auckland.ac.nz>

	* tailPlot, normTailPlotLine, tTailPlotLine, gammaTailPlotLine
	added to allow shtTailPlotLine to be added to SkewHyperbolic to
	satisfy referee request.

2010-02-09   <d.scott@auckland.ac.nz>

	* added testing of distributions, unit tests for all
	functions. Initial version of DistributionUtils prepared.	

2010-01-22    <d.scott@auckland.ac.nz>

	* inst created with test setup derived from that in gdata and
	Rmetrics packages. Some enhancements to allow for different levels
	of testing.
