@@ -1,6 +1,6 @@
 Package: DistributionUtils
 Version: 0.1-1
-Date: 2010-03-10
+Date: 2010-05-11
 Title: Distribution Utilities
 Author: David Scott <d.scott@auckland.ac.nz>
 Maintainer: David Scott <d.scott@auckland.ac.nz>
