@@ -10,3 +10,4 @@ export(momSE)
 export(safeIntegrate)
 export(skewness, kurtosis)
 export(tailPlot, normTailPlotLine, tTailPlotLine, gammaTailPlotLine)
+export(tsHessian)
