@@ -1,3 +1,7 @@
+2010-05-11    <d.scott@auckland.ac.nz>
+
+	* tsHessian added to calculate the approximate Hessian of a function
+
 2010-03-10    <d.scott@auckland.ac.nz>
 
 	* tailPlot, normTailPlotLine, tTailPlotLine, gammaTailPlotLine
@@ -7,7 +11,7 @@
 2010-02-09   <d.scott@auckland.ac.nz>
 
 	* added testing of distributions, unit tests for all
-	functions. Initial version of DistributionUtils prepared.	
+	functions. Initial version of DistributionUtils prepared.
 
 2010-01-22    <d.scott@auckland.ac.nz>
 
